# FIFA-Live-Editor-Launcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Launcher/: CMakeLists.txt  appicon.aps  appicon.rc  main.cpp
Launcher/headers/: config.h  consts.h  context.h  core.h  fonts.h  hotkey_manager.h  injector.h  legacy_file_structure.h  localize.h  logger.h  misc.h  options_id.h
Launcher/headers/SDK/FB/: build_info.h
Launcher/headers/config/: config.h  settings.h  ui_styles.h  values.h
Launcher/headers/files_manager/: files_manager.h
Launcher/headers/logger/: const.h  enum.h  logger.h
Launcher/headers/ui/: edit_hotkey_window.h  gui.h  imgui_helper.h  imgui_localize.h  injector_window.h  locale_window.h  settings_window.h  status_window.h
Launcher/source/: config.cpp  core.cpp  hotkey_manager.cpp  injector.cpp  localize.cpp  logger.cpp  misc.cpp  options_id.cpp
Launcher/source/config/: config.cpp  settings.cpp  values.cpp
Launcher/source/files_manager/: files_manager.cpp
Launcher/source/logger/: logger.cpp
Launcher/source/ui/: edit_hotkey_window.cpp  gui.cpp  imgui_localize.cpp  injector_window.cpp  locale_window.cpp  settings_window.cpp  status_window.cpp
